# logloom

./: .gitignore  .logloomignore  .logloomrc.toml  LICENSE  README.md  action.yml  demo.py  deploy_pipeline.py  logloom_graph.json  pyproject.toml  release.yaml  setup.py  test_ts.py
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  index.md
docs/explanation/: ast-scanning.md
docs/how-to/: elastic-integrations.md  redact-sensitive-data.md
docs/reference/: cli.md  graph-schema.md
docs/tutorials/: getting-started.md
sdk/go/: README.md  go.mod
sdk/go/logloom/: handler.go  handler_test.go
src/logloom/: __init__.py  _compat.py
src/logloom/cli/: build.py  diff_cmd.py  es_cmd.py  graph_cmd.py  init.py  lint.py  main.py  report.py
src/logloom/elasticsearch/: __init__.py  mapping.py  shipper.py
src/logloom/graph/: builder.py  cache.py  hasher.py  model.py  store.py
src/logloom/intelligence/: __init__.py  call_graph.py  coverage.py  diff.py  git_meta.py  import_graph.py  tagger.py
src/logloom/logger/: resolver.py  wrapper.py
src/logloom/otel/: __init__.py  bridge.py
src/logloom/scanner/: base.py  go_scanner.py  model_scanner.py  python_scanner.py  regex_fallback.py  ts_scanner.py
src/logloom/scanner/queries/: go_logs.py  go_logs.scm  python_logs.py  (+3 more)
tests/fixtures/: sample_app.go  sample_app.py  sample_app.ts
tests/integration/: test_build_pipeline.py  test_cli.py  test_ecosystem.py  test_es_otel_e2e.py  test_intelligence_pipeline.py  test_multi_language.py  test_vorsam_elastic_e2e.py
tests/unit/: test_coverage.py  test_cross_language_calls.py  test_diff.py  test_es_mapping.py  test_es_shipper.py  test_git_meta.py  test_go_scanner.py  test_hasher.py  test_import_graph.py  test_incremental_cache.py  test_init.py  test_logger.py  test_model_scanner.py  test_otel_bridge.py  test_remediation_fixes.py  test_resolver.py  test_tagger.py  test_ts_scanner.py
