[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logloom"
version = "0.1.0"
description = "Weave your codebase into every log line. AST-powered semantic provenance for logs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "structlog>=24.0",
    "typing_extensions>=4.0; python_version<'3.10'",
    "pydantic>=2.0",
]

[project.optional-dependencies]
build = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "click>=8.0",
    "rich>=13.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
logloom = "logloom.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/logloom"]
